# wilton_bench

./: .gitmodules  CMakeLists.txt
resources/: config.json
samples/golang/: CMakeLists.txt  server.go
samples/node/: server.js
samples/wilton_c/: CMakeLists.txt  server.c
samples/wilton_js/: server.js
samples/wilton_js/views/: hello.js  json.js
scripts/: bench.js
scripts/histogram_constructor/: README.md  clean.sh  copy_finded.py  finder.sh  unite.py  unite.sh
scripts/test_data_handler/: README.md  data_gather.sh  run_handler.sh  start_processing.sh
scripts/test_runner/: README.md  RSS_gatherer.sh  run_load_tests.sh  server_test.sh  wrk_test_params.txt
scripts/wrk/: json_large.lua  json_small.lua
tools/: CMakeLists.txt
